--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "studyJava0621",
         "package0001",
         "pack",
-        "studyJava0621"
+        "studyJava0624"
     ]
 }
