--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "java.project.sourcePaths": [
+        "studyJava0624",
         "studyJava0621",
         "package0001",
         "pack",
-        "studyJava0624"
+        "sandwich"
     ]
 }
