--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,20 @@
             "type": "java",
             "name": "Launch Main",
             "request": "launch",
+            "mainClass": "sandwichs.Main",
+            "projectName": "javaHome_3092c53"
+        },
+        {
+            "type": "java",
+            "name": "Launch mo",
+            "request": "launch",
+            "mainClass": "sandwichs.mo",
+            "projectName": "javaHome_3092c53"
+        },
+        {
+            "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
             "mainClass": "sandwich.Main",
             "projectName": "javaHome_2e5fed7f"
         },
