--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "javaHome_2e5fed7f"
+        },
+        {
+            "type": "java",
             "name": "Launch abocadosand",
             "request": "launch",
             "mainClass": "sandwichs.abocadosand",
@@ -57,7 +64,7 @@
             "type": "java",
             "name": "Launch Main",
             "request": "launch",
-                     "mainClass": "sandwichs.Main",
+            "mainClass": "sandwichs.Main",
             "projectName": "javaHome_3092c53"
         },
         {
